--- a/readme
+++ b/readme
@@ -9,8 +9,13 @@
 Що таке лінійні трансформації?
 
 Як і в яких галузях застосовуються лінійні трансформації?
-Що таке матриця лінійної трансформації та як її можна інтерпретувати?
-Які особливості та властивості має матриця обертання?
+як було показано в одному з наведених посиланнях, лінійні трансформації можна використовувати в графіці (роботі із зображеннями).
+
+Щ
 Чи залежить фінальний результат від порядку трансформацій? Провести експерименти з фігурами або зображеннями з частин 1-2.
-Була здійснена якась довільна лінійна трансформація; як знайти матрицю лінійної трансформації, що поверне все до початкового вигляду? Чи завжди можна здійснити обернену трансформацію?
-Модуль визначника матриці трансформації менше 1, які висновки можна зробити про дану трансформацію (як змінюється простір при даній трансформації)? А якщо більше 1? Дорівнює 1? Дорівнює 0?
+так, звісно залежить. як приклад, якщо спочатку використати tilt і scale та навпаки, результат буде дуже різним
+Була здійснена якась довільна лінійна трансформація; як знайти матрицю лінійної трансформації, що поверне все до початкового вигляду?
+Чи завжди можна здійснити обернену трансформацію?
+для того, щоб знайти матрицю лінійної трансформації, що поверне все до початкового вигляду, потрібно знайти обернену матрицю до матриці трансформації. а це можна зробити за виконання
+двох умов: визначник не нуль та матриця є квадратною. отже, знайти подібну матрицю не завжди можливо
+
